--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "autoprefixer": "^9.0.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "vue": "^2.6.11",
     "vue-i18n": "^8.22.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -23,6 +24,8 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "axios": "^0.18.0",
+    "postcss-inline-rtl": "^0.9.8",
+    "postcss-loader": "^6.1.1",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-i18n": "~2.1.1",
     "vue-template-compiler": "^2.6.11"
